apps/syncthing/overlays/nishir-gateway/tcproute-replication.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: syncthing-replication
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: syncthing-replication
          port: 22000
